<!--suppress ALL -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".geoloc.MapsActivity">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:gravity="center_vertical">


        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange_a"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginLeft="20dp"
            android:onClick="goToDetailArticle"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_origin_adress"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_enter_destination_adress"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_pour_plus_d_options"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="5dp">



        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/contentD_picto_marche"
            android:src="@drawable/ic_directions_walk_bleu_24dp" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            style="@style/label_bleu"
            android:text="@string/txt_zero_km" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/contentD_picto_temps"
            android:padding="5dp"
            android:src="@drawable/ic_access_time_blue_24dp" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            style="@style/label_bleu"
            android:text="@string/txt_zero_minute" />

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
