<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dominique.fr.myapplikejv.Fragment_Inscription_etape1"
    android:orientation="vertical">

    <TextView
        style="@style/Titre_page_bleu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_entrer_pseudo"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">


        <TextView
            android:id="@+id/txt_new_pseudo"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/pseudo"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/editText_new_Pseudo"
            style="@style/txt_dans_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/pseudo"
            android:inputType="textPersonName"
            android:text="nouvel inscrit" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/btn_next_step1"
            style="@style/bouton_bleu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:onClick="goStep2"

            />

    </RelativeLayout>



</LinearLayout>
